# cupuacu

./: .gitignore  .vimspector.json  CMakeLists.txt  DEV.md  README.md  USER_MANUAL.md  ciwi-project.yaml  tsan.supp
cmake/: ClangFormat.cmake  Cupuacu.desktop.in  Cupuacu.exe.manifest  Cupuacu.rc.in  CupuacuInfo.plist.in  FetchContentCache.cmake  Findccache.cmake  ResourceBundling.cmake  ThreadSanitizer.cmake
docker/integration/linux/: Dockerfile  alsa.conf
docker/linux-arm64-cross/: Dockerfile
packaging/: build-macos-dmg.sh  build-windows-installer.ps1  windows-bundle.wxs  windows-installer.wxs
resources/app-icons/macos/: Cupuacu.icns
scripts/: generate_app_icons.py  run-coverage-macos.sh  run-integration-linux.sh  run-integration-podman.sh  run-joint-coverage-podman.sh
src/main/: AudioBuffer.h  AudioDevice.cpp  AudioDevice.hpp  AudioDeviceState.hpp  AudioDeviceView.cpp  AudioDeviceView.hpp  AudioDevices.cpp  AudioDevices.hpp  AudioMessage.hpp  ClipboardAudio.hpp  Constants.h  Constants.hpp  CupuacuState.cpp  CupuacuState.h  DirtyTrackingAudioBuffer.h  DirtyTrackingAudioBuffer.hpp  Document.cpp  Document.h  Document.hpp  DocumentSession.hpp  DocumentTab.hpp  EffectSettings.hpp  EventHandling.h  Gui.cpp  Gui.h  Logger.cpp  Logger.hpp  LongTask.cpp  LongTask.hpp  PaUtil.hpp  Paths.cpp  Paths.hpp  ResourceUtil.hpp  SampleFormat.h  SampleFormat.hpp  SelectedChannels.hpp  State.cpp  State.h  State.hpp  file_loading.h  (+7 more)
src/main/actions/: BackgroundOpen.cpp  BackgroundOpen.hpp  CocoaSaveFileDialog.mm  DocumentDialogs.hpp  DocumentIo.hpp  DocumentLifecycle.hpp  DocumentRestore.hpp  DocumentSessionPersistence.hpp  DocumentTabs.hpp  DocumentUi.hpp  ExportAudioDialogSettings.hpp  MutationAvailability.hpp  PlatformSaveFileDialog.hpp  Play.cpp  Play.h  Record.cpp  Record.hpp  Save.h  Save.hpp  SessionWindowGeometryPlanning.hpp  ShowOpenFileDialog.h  ShowOpenFileDialog.hpp  ShowSaveFileDialog.hpp  Undoable.h  Undoable.hpp  ViewPolicy.hpp  ViewPolicyPlanning.hpp  Zoom.h  Zoom.hpp  ZoomPlanning.hpp
src/main/audio/: AudioBuffer.hpp  AudioCallbackCore.cpp  AudioCallbackCore.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioDeviceState.hpp  AudioDeviceView.cpp  AudioDeviceView.hpp  AudioDevices.cpp  AudioDevices.hpp  AudioMessage.hpp  AudioProcessor.hpp  DirtyTrackingAudioBuffer.hpp  MeterAccumulator.hpp  MeterFrame.hpp  PreservationTrackingAudioBuffer.hpp  RecordedChunk.hpp  SampleProvenance.hpp
src/main/concurrency/: AtomicStateExchange.hpp  BoundedMpmcQueue.hpp  LatestWinsBackgroundWorker.hpp
src/main/effects/: AmplifyEnvelopeEffect.cpp  AmplifyEnvelopeEffect.hpp  AmplifyFadeEffect.cpp  AmplifyFadeEffect.hpp  DynamicsEffect.cpp  DynamicsEffect.hpp  EffectDialogWindow.hpp  EffectSettings.hpp  EffectTargeting.hpp  MakeSilentEffect.hpp  RemoveSilenceEffect.cpp  RemoveSilenceEffect.hpp  ReverseEffect.hpp
src/main/file/: AudioExport.cpp  AudioExport.hpp  AudioFileWriter.cpp  AudioFileWriter.hpp  ChunkedPreservationRewrite.hpp  FileIo.hpp  MarkerPersistence.hpp  OverwritePreservation.hpp  OverwritePreservationMutation.hpp  OverwritePreservationState.hpp  Pcm16PreservationIO.hpp  PcmPreservationIO.hpp  PreservationBackend.hpp  PreservationWriteInput.hpp  SampleQuantization.hpp  SaveWritePlan.hpp  SndfilePath.hpp  WavWriter.h  WavWriter.hpp  file_loading.h  file_loading.hpp
src/main/gui/: AmplifyFadeWindow.cpp  AmplifyFadeWindow.hpp  Button.cpp  Button.hpp  Colors.h  Component.cpp  Component.h  Component.hpp  ComponentLookup.hpp  ComponentPlanning.hpp  ControlPointHandle.cpp  ControlPointHandle.hpp  DevicePropertiesWindow.cpp  DevicePropertiesWindow.h  DevicePropertiesWindow.hpp  DisplaySettingsWindow.cpp  DisplaySettingsWindow.hpp  DocumentMarkerHandle.cpp  DocumentMarkerHandle.hpp  DocumentSessionWindow.cpp  DocumentSessionWindow.hpp  DropdownMenu.cpp  DropdownMenu.h  DropdownMenu.hpp  DynamicsWindow.cpp  DynamicsWindow.hpp  EditorViewState.hpp  EventHandling.h  EventHandling.hpp  ExportAudioDialogWindow.cpp  ExportAudioDialogWindow.hpp  GenerateSilenceDialogWindow.cpp  GenerateSilenceDialogWindow.hpp  Gui.cpp  Gui.h  Gui.hpp  Helpers.h  Label.cpp  Label.h  Label.hpp  (+115 more)
src/main/persistence/: AudioDevicePropertiesPersistence.cpp  AudioDevicePropertiesPersistence.hpp  DisplayPropertiesPersistence.cpp  DisplayPropertiesPersistence.hpp  DocumentAutosave.cpp  DocumentAutosave.hpp  RecentFilesPersistence.cpp  RecentFilesPersistence.hpp  SessionStatePersistence.cpp  SessionStatePersistence.hpp
src/main/playback/: PlaybackRange.hpp
src/main/undo/: UndoManifestPersistence.cpp  UndoManifestPersistence.hpp  UndoStore.cpp  UndoStore.hpp
src/main/utils/: SimpleAction.hpp  SmallFn.hpp  TimeUtils.hpp  TypePrint.hpp  VariantUtils.hpp
src/main/waveform/: DocumentWaveformCaches.cpp  DocumentWaveformCaches.hpp  WaveformCachePersistence.cpp  WaveformCachePersistence.hpp
src/test/: BackgroundEffectTestUtil.hpp  TestPaths.hpp  TestResourceUtil.hpp  TestSdlLogSilencer.hpp  TestSdlTtfGuard.cpp  TestSdlTtfGuard.hpp  TestStateBuilders.hpp  dummy_menu_bar_test.cpp  test.cpp  test_action_undoables.cpp  test_aiff_writer.cpp  test_alac_codec.cpp  test_amplify_envelope_effect.cpp  test_audio_callback_core.cpp  test_audio_device_properties_persistence.cpp  test_audio_devices_orchestration.cpp  test_background_effects.cpp  test_component_dirty_rects.cpp  test_component_hierarchy.cpp  test_component_layout_and_dirty.cpp  test_component_planning.cpp  test_component_redraws.cpp  test_display_properties_persistence.cpp  test_document_autosave.cpp  test_document_markers.cpp  test_document_session.cpp  test_document_tabs.cpp  test_edit_commands.cpp  test_empty_session.cpp  test_export_audio_dialog_settings.cpp  test_gui_primitives.cpp  test_latest_wins_background_worker.cpp  test_long_task.cpp  test_m4a_atoms.cpp  test_m4a_parser.cpp  test_m4a_writer.cpp  test_main_view_layout.cpp  test_main_view_layout_planning.cpp  test_main_view_recording.cpp  test_main_view_selection_marker_planning.cpp  (+40 more)
src/test/integration/: IntegrationTestHelpers.hpp  test_empty_session.cpp  test_event_and_waveform_runtime.cpp  (+8 more)
(+56 files in other folders)
